All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Sub_Process_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Sub_Process_Source_Field__c</fullName>
    <label>Sub Process Source Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>