All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SubmoduleID__c.field-meta.xml
<CustomField>
    <fullName>SubmoduleID__c</fullName>
    <description>A unique Identification for each Submodule.</description>
    <inlineHelpText>A unique Identification for each Submodule.</inlineHelpText>
    <label>Submodule ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>