All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Target_Object_label__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_label__c</fullName>
    <label>Target Object label</label>
    <length>150</length>
    <type>Text</type>
</CustomField>