All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Target_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Name__c</fullName>
    <description>API Name of Target Object in Object Mapping</description>
    <inlineHelpText>API Name of Target Object in Object Mapping</inlineHelpText>
    <label>Target Object Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>