All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Technician_Service_Group__c.field-meta.xml
<CustomField>
    <fullName>Technician_Service_Group__c</fullName>
    <description>Used in Work Order Pre-calculation trigger.</description>
    <formula>Assign_To_Technician__r.Service_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician Service Group</label>
    <type>Text</type>
</CustomField>