All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Technician_User__c.field-meta.xml
<CustomField>
    <fullName>Technician_User__c</fullName>
    <description>Used in Work Order Pre-calculation trigger.</description>
    <formula>Assign_To_Technician__r.Salesforce_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician User</label>
    <type>Text</type>
</CustomField>