All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal use only</description>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Dispatch Processes</relationshipLabel>
    <relationshipName>ServiceMax_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>