All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Tolerance__c</fullName>
    <description>Tolerance (Minutes)</description>
    <inlineHelpText>Tolerance (Minutes)</inlineHelpText>
    <label>Tolerance (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>