All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SOURCE</fullName>
            </value>
            <value>
                <fullName>SOURCECHILD</fullName>
            </value>
            <value>
                <fullName>TARGET</fullName>
            </value>
            <value>
                <fullName>TARGETCHILD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>