All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/View_For__c.field-meta.xml
<CustomField>
    <fullName>View_For__c</fullName>
    <label>View For</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grid</fullName>
                <default>true</default>
                <label>Grid</label>
            </value>
            <value>
                <fullName>Map</fullName>
            </value>
            <value>
                <fullName>Grid And Map</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>