All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Weight_Node_Type__c.field-meta.xml
<CustomField>
    <fullName>Weight_Node_Type__c</fullName>
    <description>Internal use only</description>
    <label>Weight Relations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>