All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Weight_Preferred_Technician__c.field-meta.xml
<CustomField>
    <fullName>Weight_Preferred_Technician__c</fullName>
    <label>Weight Preferred Technician</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>