All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Weight_Route_Time__c.field-meta.xml
<CustomField>
    <fullName>Weight_Route_Time__c</fullName>
    <description>Internal use only</description>
    <label>Weight Route Time</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>