All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Weight_Skill_Match__c.field-meta.xml
<CustomField>
    <fullName>Weight_Skill_Match__c</fullName>
    <label>Weight Skill Match</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>