All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Weight_Tech_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Weight_Tech_Eligibility__c</fullName>
    <label>Weight Tech Eligibility</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>