All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Window_Height__c.field-meta.xml
<CustomField>
    <fullName>Window_Height__c</fullName>
    <description>Height of window opened to launch Service Flow Wizard action</description>
    <inlineHelpText>Height of window opened to launch Service Flow Wizard action</inlineHelpText>
    <label>Window Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>