All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Window_Width__c.field-meta.xml
<CustomField>
    <fullName>Window_Width__c</fullName>
    <description>Width of window opened to launch Service Flow Wizard action</description>
    <inlineHelpText>Width of window opened to launch Service Flow Wizard action</inlineHelpText>
    <label>Window Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>