All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Business_Rule.recordType-meta.xml
<RecordType>
    <fullName>Business_Rule</fullName>
    <active>true</active>
    <label>Business Rule</label>
</RecordType>