All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Checklist_Smart_Doc.recordType-meta.xml
<RecordType>
    <fullName>Checklist_Smart_Doc</fullName>
    <active>true</active>
    <label>Checklist Smart Doc</label>
</RecordType>