All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Contract_Billing_Process.recordType-meta.xml
<RecordType>
    <fullName>Contract_Billing_Process</fullName>
    <active>true</active>
    <label>Contract Billing Process</label>
</RecordType>