All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Export_Configuration.recordType-meta.xml
<RecordType>
    <fullName>Export_Configuration</fullName>
    <active>true</active>
    <label>Export Configuration</label>
</RecordType>