All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Forward_Shipment_Process.recordType-meta.xml
<RecordType>
    <fullName>Forward_Shipment_Process</fullName>
    <active>true</active>
    <description>Forward Shipment Process</description>
    <label>Forward Shipment Process</label>
</RecordType>