All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Fulfillment_Process.recordType-meta.xml
<RecordType>
    <fullName>Fulfillment_Process</fullName>
    <active>true</active>
    <label>Fulfillment Process</label>
</RecordType>