All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Initiate_Return_Process.recordType-meta.xml
<RecordType>
    <fullName>Initiate_Return_Process</fullName>
    <active>true</active>
    <description>Initiate Returns (APL)</description>
    <label>Initiate Return Process</label>
</RecordType>