All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Inventory_Process.recordType-meta.xml
<RecordType>
    <fullName>Inventory_Process</fullName>
    <active>true</active>
    <description>Inventory Process</description>
    <label>Inventory Process</label>
</RecordType>