All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Linked_Process.recordType-meta.xml
<RecordType>
    <fullName>Linked_Process</fullName>
    <active>true</active>
    <description>Linked Process</description>
    <label>Linked Process</label>
</RecordType>