All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Module.recordType-meta.xml
<RecordType>
    <fullName>Module</fullName>
    <active>true</active>
    <description>Module</description>
    <label>Module</label>
</RecordType>