All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Named_Search.recordType-meta.xml
<RecordType>
    <fullName>Named_Search</fullName>
    <active>true</active>
    <description>Named Search</description>
    <label>Named Search</label>
</RecordType>