All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Object_Mapping.recordType-meta.xml
<RecordType>
    <fullName>Object_Mapping</fullName>
    <active>true</active>
    <description>Object Mapping</description>
    <label>Object Mapping</label>
</RecordType>