All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Outbound_Route_Calculation.recordType-meta.xml
<RecordType>
    <fullName>Outbound_Route_Calculation</fullName>
    <active>true</active>
    <label>Outbound Route Calculation</label>
</RecordType>