All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/PM_Process.recordType-meta.xml
<RecordType>
    <fullName>PM_Process</fullName>
    <active>true</active>
    <label>PM Process</label>
</RecordType>