All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Process_Business_Rule.recordType-meta.xml
<RecordType>
    <fullName>Process_Business_Rule</fullName>
    <active>true</active>
    <label>Process Business Rule</label>
</RecordType>