All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/QB_Validation.recordType-meta.xml
<RecordType>
    <fullName>QB_Validation</fullName>
    <active>true</active>
    <label>QB Validation</label>
</RecordType>