All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Receiving_Process.recordType-meta.xml
<RecordType>
    <fullName>Receiving_Process</fullName>
    <active>true</active>
    <description>Receiving Process (APL)</description>
    <label>Receiving Process</label>
</RecordType>