All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Schedule_Header.recordType-meta.xml
<RecordType>
    <fullName>Schedule_Header</fullName>
    <active>true</active>
    <description>Schedule Header</description>
    <label>Schedule Header</label>
</RecordType>