All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Settings.recordType-meta.xml
<RecordType>
    <fullName>Settings</fullName>
    <active>true</active>
    <description>Organization-wide settings impacting the functionality of ServiceMax</description>
    <label>Settings</label>
</RecordType>