All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/SF_Action.recordType-meta.xml
<RecordType>
    <fullName>SF_Action</fullName>
    <active>true</active>
    <description>Service Flow Action</description>
    <label>SF Action</label>
</RecordType>