All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/SM_Application_Profile.recordType-meta.xml
<RecordType>
    <fullName>SM_Application_Profile</fullName>
    <active>true</active>
    <description>Device specific exclusions for wizards, steps and custom actions will be stored for each Delivery platform.</description>
    <label>Application Profile</label>
</RecordType>