All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/SPM_Scheduling_Optimization_Rule.recordType-meta.xml
<RecordType>
    <fullName>SPM_Scheduling_Optimization_Rule</fullName>
    <active>true</active>
    <description>Hold the configurations for scheduled optimization</description>
    <label>SPM Scheduling Optimization Rule</label>
</RecordType>