All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Submodule.recordType-meta.xml
<RecordType>
    <fullName>Submodule</fullName>
    <active>true</active>
    <description>Submodule</description>
    <label>Submodule</label>
</RecordType>