All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/SVMX_Rule.recordType-meta.xml
<RecordType>
    <fullName>SVMX_Rule</fullName>
    <active>true</active>
    <description>SVMX Rule</description>
    <label>SVMX Rule</label>
</RecordType>