All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Target_Manager.recordType-meta.xml
<RecordType>
    <fullName>Target_Manager</fullName>
    <active>true</active>
    <description>Target Manager</description>
    <label>Target Manager</label>
</RecordType>