All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Timesheet.recordType-meta.xml
<RecordType>
    <fullName>Timesheet</fullName>
    <active>true</active>
    <description>Timesheet Configuration</description>
    <label>Timesheet</label>
</RecordType>