All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/View_Definition.recordType-meta.xml
<RecordType>
    <fullName>View_Definition</fullName>
    <active>true</active>
    <label>View Definition</label>
</RecordType>