All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Wizard.recordType-meta.xml
<RecordType>
    <fullName>Wizard</fullName>
    <active>true</active>
    <description>Wizard</description>
    <label>Wizard</label>
</RecordType>