All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/recordTypes/Work_Order_Billing_Process.recordType-meta.xml
<RecordType>
    <fullName>Work_Order_Billing_Process</fullName>
    <active>true</active>
    <label>Work Order Billing Process</label>
</RecordType>